2006-01-05  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Smart libraries feature is complete.

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/main_app.rb:

	Separate regular libraries from smart ones in the sidepane using a 
	separator.

2006-01-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/export_library.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/smart_library.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:
	  lib/alexandria/ui/import_dialog.rb:

	- Make sure smart libraries are exportable ;
	- Provide a default title for the Add Book Manually / Book Properties
	  dialogs when the target book title is empty ;
	- Added a keyboard shortcut for the Import button of the Import dialog ;
	- Make sure the latest regular library is not deletable ;
	- Misc fixes.

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog_base.rb:

	Removed the clear cover button in the books properties dialog and added
	a button to the cover file chooser dialog instead that does the same
	thing.

	* lib/alexandria/ui/main_app.rb:

	Make sure all tree view columns (in both libraries and books views)
	are ellipsizable at their end.

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/icons/smart_library.png,
	  data/alexandria/icons/smart_library_small.png,
	  data/alexandria/ui/popups.xml,
	  lib/alexandria/export_library.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/smart_library.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/acquire_dialog.rb,
	  lib/alexandria/ui/import_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb,
	  lib/alexandria/ui/new_smart_library_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog_base.rb:

	- More work on the smart libraries (feature is almost complete) ;